fix(Members): remove horizontal scroll

--- a/src/components/Chat/Members/Members.module.scss
+++ b/src/components/Chat/Members/Members.module.scss
@@ -71,7 +71,9 @@
 }
 
 .wrapName {
+  overflow: hidden;
   padding-left: 10px;
+  text-overflow: ellipsis;
 }
 
 .showAllWrap {
