--- a/src/components/common/Name/Name.module.scss
+++ b/src/components/common/Name/Name.module.scss
@@ -1,12 +1,10 @@
 @import '../../../styles/colors';
 
 .name {
-  overflow: hidden;
   font-weight: 700;
   font-size: 16px;
   white-space: nowrap;
   text-decoration: none;
-  text-overflow: ellipsis;
   color: $color-white;
 
   @media (max-width: 420px) {
